--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <li><a href="#">Trending</a></li>
                 <li><a href="#">Clothes</a></li>
                 <li><a href="#">Shoes</a></li>
-                <li><a href="#">Mobile</a></li>
+                <li><a href="mobile.html">Mobile</a></li>
                 <li><a href="blog.html">Blogs</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
