--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <li><a href="#"><i class="fas fa-bars"></i> All Categories</a></li>
                 <li><a href="#">Trending</a></li>
                 <li><a href="#">Clothes</a></li>
-                <li><a href="#">Shoes</a></li>
+                <li><a href="shoe.html">Shoes</a></li>
                 <li><a href="mobile.html">Mobile</a></li>
                 <li><a href="blog.html">Blogs</a></li>
                 <li><a href="contact.html">Contact</a></li>
